objects/blng__DebitNoteLine__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__AllocatedRevenueAmount__c</fullName>
        <label>Revenue Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Allocations__c</fullName>
        <inlineHelpText>Amount of this line allocated to invoices. Does not include tax.</inlineHelpText>
        <label>Invoice Line Allocations</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__AvailableBalance__c</fullName>
        <formula>blng__TotalAmount__c -  blng__NetPaymentAllocations__c  -  blng__InvoiceLineNetAllocations__c -  blng__CreditNoteLineNetAllocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__AvailableForPayment__c</fullName>
        <formula>blng__TotalPaymentAmount__c  -  blng__TotalRefundAmount__c  -   blng__NetPaymentAllocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>Debit_Note_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>Debit_Note_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Finance Book assigned to this line</inlineHelpText>
        <label>Billing Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>BillingFinanceBookDebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Billing GL Rule assigned to this line</inlineHelpText>
        <label>Billing GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>BillingGLRuleDebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Billing Treatment assigned to this line</inlineHelpText>
        <label>Billing GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>BillingGLTreatmentDebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Rule</label>
        <referenceTo>blng__BillingRule__c</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>BillingRuleDebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Treatment</label>
        <referenceTo>blng__BillingTreatment__c</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>BillingTreatmentDebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CalculateTax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Tax?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLineAllocations__c</fullName>
        <label>Credit Note Line Allocations</label>
        <summarizedField>blng__DebitNoteAllocationCreditNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocationCreditNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocationCreditNoteLine__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLineNetAllocations__c</fullName>
        <formula>blng__CreditNoteLineAllocations__c -  blng__CreditNoteLineUnallocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Note Line Net Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLineUnallocations__c</fullName>
        <label>Credit Note Line Unallocations</label>
        <summarizedField>blng__DebitNoteAllocationCreditNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocationCreditNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocationCreditNoteLine__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteLineDate__c</fullName>
        <label>Debit Note Line Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__DebitNote__c</fullName>
        <label>Debit Note</label>
        <referenceTo>blng__DebitNote__c</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>DebitNoteLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__EffectiveTaxDate__c</fullName>
        <label>Effective Tax Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__FinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>FinancePeriodDebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__ImpactAmount__c</fullName>
        <formula>blng__TotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLineNetAllocations__c</fullName>
        <formula>blng__Allocations__c  -  blng__Unallocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Line Net Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntityReference__c</fullName>
        <externalId>true</externalId>
        <label>LegalEntityReference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Legal Entity for this line</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>LegalEntityDebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__NetPaymentAllocations__c</fullName>
        <formula>blng__Payments__c -  blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Payment Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OverrideInitialRevenueEndDate__c</fullName>
        <label>Override Initial Revenue End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__OverrideInitialRevenueStartDate__c</fullName>
        <label>Override Initial Revenue Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__PaymentBalance__c</fullName>
        <formula>blng__TotalAmount__c - blng__Payments__c + blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Payments1__c</fullName>
        <formula>blng__Payments__c - blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Payments__c</fullName>
        <label>Payment Allocations</label>
        <summarizedField>blng__PaymentAllocationDebitNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationDebitNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationDebitNoteLine__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>DebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Refunds__c</fullName>
        <inlineHelpText>Amount that has been refunded from this line</inlineHelpText>
        <label>Payment Unallocations</label>
        <summarizedField>blng__PaymentAllocationDebitNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationDebitNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationDebitNoteLine__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RevenueAgreementMatchingID__c</fullName>
        <label>Revenue Agreement Matching ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RevenueExpectedAmount__c</fullName>
        <label>Revenue Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueLiabilityAmount__c</fullName>
        <label>Revenue Liability Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueMostLikelyAmount__c</fullName>
        <label>Revenue Most Likely Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueScheduleStatus__c</fullName>
        <label>Revenue Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RevenueScheduleStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__RevenueTransactionAmount__c</fullName>
        <label>Revenue Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueTransactionPrice__c</fullName>
        <label>Revenue Transaction Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__StandaloneSellingAmount__c</fullName>
        <label>Standalone Selling Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__StandaloneSellingPrice__c</fullName>
        <label>Standalone Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <inlineHelpText>Status of the credit memo. Can be: Draft Posted Canceled</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <inlineHelpText>Unrefunded amount of the credit note. Does not include tax. Equals Amount - Refund Amount</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <inlineHelpText>Tax amount on this line</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxCity__c</fullName>
        <label>Tax City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCountry__c</fullName>
        <label>Tax Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxErrorMessage__c</fullName>
        <label>Tax Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Tax GL Rule for this line</inlineHelpText>
        <label>Tax GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Debit Note Lines (Tax GL Rule)</relationshipLabel>
        <relationshipName>TaxGLRuleDebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Tax GL Rule for this line</inlineHelpText>
        <label>Tax GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Debit Note Lines (Tax GL Treatment)</relationshipLabel>
        <relationshipName>TaxGLTreatmentDebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxPercentageApplied__c</fullName>
        <label>Tax Percentage Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>blng__TaxRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Rule</label>
        <referenceTo>blng__TaxRule__c</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>TaxRuleDebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxState__c</fullName>
        <label>Tax State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TaxStreet2__c</fullName>
        <label>Tax Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStreet__c</fullName>
        <label>Tax Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Treatment</label>
        <referenceTo>blng__TaxTreatment__c</referenceTo>
        <relationshipLabel>Debit Note Lines</relationshipLabel>
        <relationshipName>TaxTreatmentDebitNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxZipCode__c</fullName>
        <label>Tax Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <label>Total Amount (With Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalAvailableForAllocation__c</fullName>
        <formula>blng__TotalAmount__c -  blng__TotalNetAllocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for Allocation (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalNetAllocations__c</fullName>
        <formula>blng__CreditNoteLineNetAllocations__c +  blng__InvoiceLineNetAllocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Allocations (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalPaymentAmount__c</fullName>
        <label>Total Payment Amount</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__PaymentAmount__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TotalRefundAmount__c</fullName>
        <label>Total Refund Amount</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__RefundAmount__c</summarizedField>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Unallocations__c</fullName>
        <inlineHelpText>Amount of this line that has been unallocated from invoices.</inlineHelpText>
        <label>Invoice Line Unallocations</label>
        <summarizedField>blng__DebitNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__DebitNoteAllocation__c.blng__DebitNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Debit Note Line</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debit Note Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>